attached_assets/Pasted--A-PostCSS-plugin-did-not-pass-the-from-option-to-postcss-parse-This-may-cause-imported-assets-1764404652772_1764404652772.txt

A PostCSS plugin did not pass the `from` option to `postcss.parse`. This may cause imported assets to be incorrectly transformed. If you've recently added a PostCSS plugin that raised this warning, please contact the package author to fix the issue.
[replit-cartographer] Error processing /home/runner/workspace/client/src/pages/client-workout-plans.tsx: SyntaxError: Unexpected token, expected "," (87:4)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
    at unexpected (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1543:16)
    at expect (/home/runner/workspace/node_modules/@babel/parser/src/parser/util.ts:157:12)
    at parseCallExpressionArguments (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1023:14)
    at parseCoverCallAndAsyncArrowHead (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:914:29)
    at parseSubscript (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:796:19)
    at parseSubscript (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2850:20)
    at parseSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:755:19)
    at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:740:17)
    at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:713:21)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:675:23)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3855:20)
    at parseMaybeUnaryOrPrivate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:409:14)
    at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:421:23)
    at parseMaybeConditional (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:376:23)
    at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:301:21)
    at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3727:22)
    at parseExpressionBase (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:226:23)
    at callback (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:217:39)
    at allowInAnd (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:3187:16)
    at parseExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:217:17)
    at parseReturnStatement (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1110:28)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:538:21)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3185:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:477:17)
    at parseStatementListItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:426:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1439:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1412:10)
    at parseBlock (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1380:10)
    at parseFunctionBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2616:24)
    at parseArrowExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:2553:10)
    at parseAsyncArrowFromCallExpression (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:1059:10)
    at parseAsyncArrowFromCallExpression (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3687:20)
    at parseCoverCallAndAsyncArrowHead (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:934:27)
    at parseSubscript (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:796:19)
    at parseSubscript (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:2850:20)
    at parseSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:755:19)
    at parseExprSubscripts (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:740:17)
    at parseUpdate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:713:21)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:675:23)
    at parseMaybeUnary (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3855:20)
    at parseMaybeUnaryOrPrivate (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:409:14)
    at parseExprOps (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:421:23)
    at parseMaybeConditional (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:376:23)
    at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:301:21)
    at parseMaybeAssign (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3727:22)
    at callback (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:257:12)
    at allowInAnd (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:3192:12)
    at parseMaybeAssignAllowIn (/home/runner/workspace/node_modules/@babel/parser/src/parser/expression.ts:256:17) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'UnexpectedToken',
  loc: Position { line: 87, column: 4, index: 3026 },
  pos: 3026,
  syntaxPlugin: undefined
}
8:23:30 AM [vite] (client) Pre-transform error: /home/runner/workspace/client/src/pages/client-workout-plans.tsx: Unexpected token, expected "," (87:4)

  85 |           : `POST /api/clients/${clientId}/workout-bookmarks`,
  86 |         !isBookmarked ? { workoutPlanId: planId } : undefined
> 87 |     },
     |     ^
  88 |     onSuccess: () => {
  89 |       queryClient.invalidateQueries({ queryKey: [`/api/clients/${clientId}/workout-bookmarks`] });
  90 |       toast({ description: isBookmarked ? "Bookmark removed" : "Added to bookmarks" });
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/pages/client-workout-plans.tsx:87:4
  85 |            : `POST /api/clients/${clientId}/workout-bookmarks`,
  86 |          !isBookmarked ? { workoutPlanId: planId } : undefined
  87 |      },
     |      ^
  88 |      onSuccess: () => {
  89 |        queryClient.invalidateQueries({ queryKey: [`/api/clients/${clientId}/workout-bookmarks`] });
